--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
-    "baseUrl": "./",
-    "paths": {
-      "@app/codekoller-logger": ["src"],
-      "@app/codekoller-logger/*": ["src/*"]
-    }
+    "baseUrl": "./"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
